mejorar minimas en una clase